--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,23 @@
 .App-link {
   color: #61dafb;
 }
+
+.store-div{
+  background-color: aliceblue;
+  outline: auto;
+  outline-color: #acc2eb;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 5px;
+}
+
+.warning-div{
+  color:red;
+  background-color: rgba(114, 1, 1, 0.171);
+  outline: auto;
+  padding: 2px;
+  margin-top: 5px;
+  font-size: large;
+}
