--- a/src/App.css
+++ b/src/App.css
@@ -23,8 +23,19 @@
   color: #61dafb;
 }
 
+.title-div{
+  background-color: rgba(240, 248, 255, 0.747);
+  outline: auto;
+  outline-color: #acc2eb;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 5px;
+}
+
 .store-div{
-  background-color: aliceblue;
+  background-color: rgba(240, 248, 255, 0.747);
   outline: auto;
   outline-color: #acc2eb;
   display: flex;
