--- a/src/App.css
+++ b/src/App.css
@@ -24,15 +24,28 @@
 }
 
 .title-div{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  height:300px;
+  margin: 5px;
+}
+
+.title-content-div{
   background-color: rgba(240, 248, 255, 0.747);
   outline: auto;
   outline-color: #acc2eb;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin: 5px;
-  padding-bottom: 2px;
+  height:100%;
+  width: 50%;
+}
+
+.right-div{
+  margin-left: 2.5px;
+}
+
+.left-div{
+  margin-right: 2.5px;
 }
 
 .store-div{
@@ -47,10 +60,12 @@
   padding-bottom: 2px;
 }
 
+
+
 button{
   background-color: rgb(125, 167, 204);
   border-radius: 5px;
-  height: 30px;
+  min-height: 30px;
 }
 
 button:hover{
